# Freeviewpoint

./: README.md
freeviewpoint/: CMakeLists.txt  calibParams-ballet.txt  calib_deal.cpp  calib_deal.h  main.cpp
freeviewpoint/cuda/: CMakeLists.txt  kernel.cu  kernel.h
freeviewpoint_cpu/: CMakeLists.txt  kernel.cpp  kernel.h  main.cpp
